2#  working on Material Design Layout

--- a/otter-book/src/app/app.component.html
+++ b/otter-book/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-websites-dashboard></app-websites-dashboard>
+
+<div class="master-container 12-column" cols="12" rows="12" >
+  <mat-sidenav-container column="4">
+    <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
+  </mat-sidenav-container>
+  <mat-divider [vertical]="true" column="8"></mat-divider>
+  <app-websites-dashboard></app-websites-dashboard>
+</div>
