--- a/otter-book/src/app/websites-dashboard/websites-dashboard.component.html
+++ b/otter-book/src/app/websites-dashboard/websites-dashboard.component.html
@@ -1,11 +1,11 @@
-<div class="grid-container">
-  <h1 class="mat-h1">My projects</h1>
-  <mat-grid-list cols="3" rowHeight="600px">
-    <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
-      <mat-card class="dashboard-card">
+
+  <!-- <mat-grid-list cols="3">
+    <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows"> -->
+      <div rows="12" cols="12">
+      <mat-card class="dashboard-card" cols='1' rows="1" >
         <mat-card-header>
           <mat-card-title>
-            {{card.title}}
+            <!-- {{card.title}} -->
             <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
               <mat-icon>more_vert</mat-icon>
             </button>
@@ -19,6 +19,6 @@
           <div>Card Content Here</div>
         </mat-card-content>
       </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
-</div>
+    </div>
+    <!-- </mat-grid-tile>
+  </mat-grid-list> -->
