--- a/otter-book/src/app/catalog/catalog.component.scss
+++ b/otter-book/src/app/catalog/catalog.component.scss
@@ -1,5 +1,5 @@
 .sidenav-container {
-  height: calc(100% - 64px); // header hight
+  height: 100%;
 }
 
 .sidenav {
@@ -15,5 +15,3 @@
   top: 0;
   z-index: 1;
 }
-
-
