--- a/otter-book/src/app/app.component.html
+++ b/otter-book/src/app/app.component.html
@@ -1,8 +1,46 @@
 
-<div class="master-container 12-column" cols="12" rows="12" >
-  <mat-sidenav-container column="4">
-    <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
+  <mat-toolbar  color="primary">
+    <button
+      
+      type="button"
+      aria-label="Toggle sidenav"
+      mat-icon-button
+      (click)="drawer.toggle()"
+      *ngIf="isHandset$ | async"
+    >
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+    <span>otter-book</span>
+  </mat-toolbar>
+  <mat-sidenav-container fixedInViewport class="sidenav-container">
+    <mat-sidenav
+      #drawer
+      class="sidenav"
+      fixedInViewport
+      [fixedInViewport]="options.fixed"
+      [fixedTopGap]="options.top"
+      [fixedBottomGap]="options.bottom"
+      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+      [mode]="(isHandset$ | async) ? 'over' : 'side'"
+      [opened]="(isHandset$ | async) === false"
+    >
+      <mat-toolbar>Menu</mat-toolbar>
+      <mat-divider></mat-divider>
+      <mat-nav-list>
+        
+        <a mat-list-item href="#">Link 1</a>
+        <mat-divider></mat-divider>
+        <a mat-list-item href="#">Link 2</a>
+        <mat-divider></mat-divider>
+        <a mat-list-item href="#">Link 3</a>
+        <mat-divider></mat-divider>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <mat-toolbar  color="accent">
+      </mat-toolbar>
+      <router-outlet></router-outlet>
+      <mat-toolbar  color="accent">
+      </mat-toolbar>
+    </mat-sidenav-content>
   </mat-sidenav-container>
-  <mat-divider [vertical]="true" column="8"></mat-divider>
-  <app-websites-dashboard></app-websites-dashboard>
-</div>
