--- a/otter-book/src/app/app.component.html
+++ b/otter-book/src/app/app.component.html
@@ -26,13 +26,8 @@
     >
       <mat-toolbar>Menu</mat-toolbar>
       <mat-divider></mat-divider>
-      <mat-nav-list>
-        
-        <a mat-list-item href="#">Link 1</a>
-        <mat-divider></mat-divider>
-        <a mat-list-item href="#">Link 2</a>
-        <mat-divider></mat-divider>
-        <a mat-list-item href="#">Link 3</a>
+      <mat-nav-list *ngFor="let list of lists | async" [ngStyle]="{'background-color': list.colorSchema }"> 
+        <a mat-list-item href="{{list.link}}">{{ list.category}} {{ list.colorSchema}}</a>
         <mat-divider></mat-divider>
       </mat-nav-list>
     </mat-sidenav>
