--- a/otter-book/src/app/app.component.html
+++ b/otter-book/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-  <mat-toolbar  color="primary">
+  <mat-toolbar color='primary'>
     <button
       
       type="button"
@@ -27,7 +27,7 @@
       <mat-toolbar>Menu</mat-toolbar>
       <mat-divider></mat-divider>
       <mat-nav-list *ngFor="let list of lists | async" [ngStyle]="{'background-color': list.colorSchema }"> 
-        <a mat-list-item href="{{list.link}}">{{ list.category}} {{ list.colorSchema}}</a>
+        <a mat-list-item (click)="changeScheme()">{{ list.category}} {{ list.colorSchema}}</a>
         <mat-divider></mat-divider>
       </mat-nav-list>
     </mat-sidenav>
