--- a/otter-book/src/app/app.component.html
+++ b/otter-book/src/app/app.component.html
@@ -26,8 +26,8 @@
     >
       <mat-toolbar>Menu</mat-toolbar>
       <mat-divider></mat-divider>
-      <mat-nav-list *ngFor="let list of lists | async" [ngStyle]="{'background-color': list.colorSchema }"> 
-        <a mat-list-item (click)="changeScheme($event)"  >{{ list.category}} {{ list.colorSchema}}</a>
+      <mat-nav-list *ngFor="let list of lists | async" > 
+        <a mat-list-item [ngStyle]="{'background-color': list.colorSchema }" (click)="changeScheme(this.list.colorSchema)"  >{{ list.category}} {{ list.colorSchema}}</a>
       </mat-nav-list>
       <mat-divider></mat-divider>
     </mat-sidenav>
