--- a/otter-book/src/app/app.component.html
+++ b/otter-book/src/app/app.component.html
@@ -27,7 +27,7 @@
       <mat-toolbar>Menu</mat-toolbar>
       <mat-divider></mat-divider>
       <mat-nav-list *ngFor="let list of lists | async" > 
-        <a mat-list-item [ngStyle]="{'background-color': list.colorSchema }" (click)="changeScheme(this.list.colorSchema)"  >{{ list.category}} {{ list.colorSchema}}</a>
+        <a mat-list-item [ngStyle]="{'background-color': list.colorSchema }" (click)="changeScheme(this.list.colorSchema)" [routerLink]="list.link" routerLinkActive="router-link-active"  >{{ list.category}} {{ list.colorSchema}}</a>
       </mat-nav-list>
       <mat-divider></mat-divider>
     </mat-sidenav>
