#2 / refactor and new changes

--- a/otter-book/src/app/websites-dashboard/websites-dashboard.component.html
+++ b/otter-book/src/app/websites-dashboard/websites-dashboard.component.html
@@ -1,4 +1,5 @@
 
+  <div id="scroll"></div>
   <mat-grid-list fixedInViewport class="scroll-styles" cols="3">
     <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
       <div rows="12" cols="12">
