--- a/front/Otter-Book/src/app/websites-dashboard-module/websites-dashboard.component.html
+++ b/front/Otter-Book/src/app/websites-dashboard-module/websites-dashboard.component.html
@@ -1,21 +1,1 @@
-<mat-toolbar>
-  <span>
-    <h1>
-      Otter Book
-    </h1>
-  </span>
-  <span>
-    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>ENG</button>
-      <button mat-menu-item>RUS</button>
-    </mat-menu>
-    <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
-    <a href="#" matRipple [matRippleColor]="myColor">
-      <img src="assets/socials/linkedin.svg" alt="LinkedIn" class="src" />
-    </a>
-    <a href="#" matRipple [matRippleColor]="myColor">
-      <img src="assets/socials/github.svg" alt="LinkedIn" class="src" />
-    </a>
-  </span>
-</mat-toolbar>
+<h2>asdasdasd</h2>
