--- a/front/Otter-Book/src/app/app.component.scss
+++ b/front/Otter-Book/src/app/app.component.scss
@@ -19,13 +19,19 @@ mat-toolbar {
     justify-content: center;
     img {
       width: 70%;
-      height: 70%;
+      min-width: 30px;
+      height: 31px;
       margin: auto;
     }
   }
-
   h1 {
     margin: auto 0;
+  }
+  mat-divider {
+    margin: 0 1rem;
+  }
+  .logo-header {
+    cursor: pointer;
   }
 }
 
@@ -34,15 +40,38 @@ mat-select {
   margin-right: 1.5rem;
 }
 
-.example-container {
+.main-page-router-nest {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background: #eee;
+}
+
+.OtterTM-styles {
+  cursor: default;
 }
 
 mat-sidenav-content {
   height: calc(100vh - 64px);
+}
+
+mat-sidenav {
+  width: 15%;
+}
+
+.mat-form-field {
+  max-width: 80px;
+  margin: auto;
+}
+.lower-menu-block {
+width: 100%;
+display: flex;
+}
+
+.lower-menu {
+  position:  absolute;
+  bottom: 0;
+  width: 100%;
+  min-height: 60px;
 }
