--- a/front/Otter-Book/src/app/app.component.scss
+++ b/front/Otter-Book/src/app/app.component.scss
@@ -54,6 +54,9 @@ mat-select {
 
 mat-sidenav-content {
   height: calc(100vh - 64px);
+  &::-webkit-scrollbar {
+    display: none;
+    }
 }
 
 mat-sidenav {
