--- a/front/Otter-Book/src/app/websites-dashboard-module/containers/websites-dashboard.component.html
+++ b/front/Otter-Book/src/app/websites-dashboard-module/containers/websites-dashboard.component.html
@@ -1,15 +1,20 @@
-<mat-toolbar>My App</mat-toolbar>
+<mat-toolbar class="module-intro">Websites</mat-toolbar>
 <mat-grid-list cols="3" rowHeight="1:1" >
   <mat-grid-tile *ngFor="let card of cards; let i = index">
     <mat-card class="example-card">
       <mat-card-header>
-        <button
+        <span>
+        <a
+          *ngFor=' let item of card.stack'
           mat-card-avatar
-          matTooltip="card.stack.name"
+          matTooltip="{{ item.name }}"
           matTooltipPosition="above"
           class="example-header-image"
-          [ngStyle]="{'background-image': card.stack.image}"
-        ></button>
+          [ngStyle]="{'background-image': 'url(' + item.image + ')'}"
+          [href]="item.docs"
+          target="_blank"
+        ></a>
+        </span>
         <mat-card-title> {{ card.projectName }}</mat-card-title>
         <mat-card-subtitle>Position: {{ card.position }}</mat-card-subtitle>
       </mat-card-header>
@@ -20,12 +25,8 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>
-          <a  mat-list-item  [routerLink]="card.detailPage"> Details</a>
-        </button>
-        <button mat-button>
-          <a [href]="card.linkToWebsite">Go to project website</a>
-        </button>
+          <a  mat-flat-button  [routerLink]="card.detailPage"> Details</a>
+          <a  mat-flat-button [href]="card.linkToWebsite">Go to project website</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
