--- a/front/Otter-Book/src/app/app.component.html
+++ b/front/Otter-Book/src/app/app.component.html
@@ -41,7 +41,7 @@
         [ngStyle]="{ 'background-color': list.colorSchema }"
         [routerLink]="list.link"
         routerLinkActive="router-link-active"
-        >{{ list.category }} {{ list.colorSchema }}</a
+        >{{ list.category }}</a
       >
     </mat-nav-list>
     <!-- Lower Menu Section -->
