--- a/front/Otter-Book/src/app/app.component.scss
+++ b/front/Otter-Book/src/app/app.component.scss
@@ -78,3 +78,12 @@ display: flex;
   width: 100%;
   min-height: 60px;
 }
+.mat-list-base {
+  padding-top: 0;
+}
+.mat-nav-list {
+  .mat-list-item {
+    padding: .7rem 0;
+    border-radius: 7px;
+  }
+}
