--- a/front/Otter-Book/src/app/app.component.html
+++ b/front/Otter-Book/src/app/app.component.html
@@ -1,66 +1,82 @@
-<mat-toolbar>
-  <span>
-      <h1 class="logo-header" routerLink="/">
-        Logo
-      </h1>
-    <mat-divider [vertical]="true"></mat-divider>
-    <h1 class="OtterTM-styles" *ngIf="(isHandset$ | async) == false">
-      Otter Book
-    </h1>
-    <h1 class="OtterTM-styles" *ngIf="isHandset$ | async">
-      Mobile Easter Egg#1
-    </h1>
-  </span>
-  <span>
-    <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
-    <a
-      href="https://www.linkedin.com/in/yegor-gagarinov-a04ab3170/"
-      target="_blank"
-      matRipple
-      [matRippleColor]="myColor"
-    >
-      <img src="assets/socials/linkedin.svg" alt="LinkedIn" class="src" />
-    </a>
-    <a
-      href="https://github.com/OtterWorld"
-      matRipple
-      [matRippleColor]="myColor"
-      target="_blank"
-    >
-      <img src="assets/socials/github.svg" alt="LinkedIn" class="src" />
-    </a>
-  </span>
-</mat-toolbar>
+<nb-layout>
 
-<mat-sidenav-container>
-  <mat-sidenav [opened]="(isHandset$ | async) === false" #sidenav mode="side">
-    <div class="moudules-list"></div>
-    <mat-nav-list *ngFor="let list of lists">
-      <a
-        mat-list-item
-        [ngStyle]="{ 'background-color': list.colorSchema }"
-        [routerLink]="list.link"
-        routerLinkActive="router-link-active"
-        >{{ list.category }}</a
-      >
-    </mat-nav-list>
-    <!-- Lower Menu Section -->
-    <div class="lower-menu">
-      <div class="lower-menu-block">
-        <mat-form-field>
-          <mat-label>Language</mat-label>
-          <mat-select>
-            <mat-option value="ENG">ENG</mat-option>
-            <mat-option value="RUS">RUS</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-    </div>
-  </mat-sidenav>
+  <nb-layout-header fixed>
+  <!-- Insert header here -->
+  </nb-layout-header>
 
-  <mat-sidenav-content>
-    <div class="main-page-router-nest">
-      <router-outlet></router-outlet>
-    </div>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+  <nb-layout-column>
+
+    <mat-toolbar>
+      <span>
+          <h1 class="logo-header" routerLink="/">
+            Logo
+          </h1>
+        <mat-divider [vertical]="true"></mat-divider>
+        <h1 class="OtterTM-styles" *ngIf="(isHandset$ | async) == false">
+          Otter Book
+        </h1>
+        <h1 class="OtterTM-styles" *ngIf="isHandset$ | async">
+          Mobile Easter Egg#1
+        </h1>
+      </span>
+      <span>
+        <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+        <a
+          href="https://www.linkedin.com/in/yegor-gagarinov-a04ab3170/"
+          target="_blank"
+          matRipple
+          [matRippleColor]="myColor"
+        >
+          <img src="assets/socials/linkedin.svg" alt="LinkedIn" class="src" />
+        </a>
+        <a
+          href="https://github.com/OtterWorld"
+          matRipple
+          [matRippleColor]="myColor"
+          target="_blank"
+        >
+          <img src="assets/socials/github.svg" alt="LinkedIn" class="src" />
+        </a>
+      </span>
+    </mat-toolbar>
+    
+    <mat-sidenav-container>
+      <mat-sidenav [opened]="(isHandset$ | async) === false" #sidenav mode="side">
+        <div class="moudules-list"></div>
+        <mat-nav-list *ngFor="let list of lists">
+          <a
+            mat-list-item
+            [ngStyle]="{ 'background-color': list.colorSchema }"
+            [routerLink]="list.link"
+            routerLinkActive="router-link-active"
+            >{{ list.category }}</a
+          >
+        </mat-nav-list>
+        <!-- Lower Menu Section -->
+        <div class="lower-menu">
+          <div class="lower-menu-block">
+            <mat-form-field>
+              <mat-label>Language</mat-label>
+              <mat-select>
+                <mat-option value="ENG">ENG</mat-option>
+                <mat-option value="RUS">RUS</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+      </mat-sidenav>
+    
+      <mat-sidenav-content>
+        <div class="main-page-router-nest">
+          <router-outlet></router-outlet>
+        </div>
+      </mat-sidenav-content>
+    </mat-sidenav-container>
+    
+  </nb-layout-column>
+
+  <nb-layout-footer fixed>
+  <!-- Insert footer here -->
+  </nb-layout-footer>
+
+</nb-layout>
